# slisp

./: AGENTS.md  BUG1_ANALYSIS.md  BUG_FIX_SUMMARY.md  BUG_INVESTIGATION.md  CLAUDE.md  Cargo.toml  DEBUG_NOTES.md  FUTURE_BUG_FIX.md  MULTIPASS_BUG_INVESTIGATION.md  PLAN.md  PLAN_AARM64  README.md  SEGFAULT_INVESTIGATION.md  SESSION_SUMMARY.md  build.rs  debug_bug1.slisp  test_debug_branchy.slisp  test_simple.slisp  test_two_params.slisp
.circleci/: config.yml
docs/: higher_order_compilation_status.md  higher_order_functions.md
runtime/src/: lib.rs
src/: allocator_trace.rs  ast_parser.rs  cli.rs  codegen.rs  compiler.rs  domain.rs  elf_gen.rs  evaluator.rs  ir.rs  jit_runner.rs  main.rs  repl.rs
src/.circleci/: config.yml
src/ast/: mod.rs  parser.rs
src/codegen/: abi.rs  api.rs  backend.rs  instructions.rs  mod.rs  runtime.rs  sizing.rs
src/codegen/x86_64_linux/: abi.rs  codegen.rs  executable.rs  helpers.rs  instructions.rs  mod.rs  runtime.rs  sizing.rs
src/compiler/: bindings.rs  builtins.rs  context.rs  expressions.rs  functions.rs  inference.rs  liveness.rs  mod.rs  slots.rs  types.rs
src/compiler/builtins/: mod.rs  ownership.rs  strings.rs
src/evaluator/: helpers.rs  mod.rs  primitives.rs  special_forms.rs
src/evaluator/primitives/: collections.rs  logic.rs  mod.rs  numeric.rs  printer.rs  strings.rs
targets/x86_64_linux/runtime/: Cargo.toml
tests/programs/: DEBUG_NOTES_SEGFAULT.md  DEBUG_NOTES_STR_BUG.md  comments.slisp  debug_eq.slisp  run_all.sh  run_all_with_tracking.sh  run_with_timeout.sh
tests/programs/functions/: simple_add.slisp  (+3 more)
(+102 files in other folders)
