[package]
name = "slisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
allocator-telemetry = ["slisp-runtime/telemetry"]

[dependencies]
memmap2 = "0.9.4"
slisp-runtime = { path = "targets/x86_64_linux/runtime" }
object = { version = "0.36", features = ["write"] }

[workspace]
members = ["targets/x86_64_linux/runtime"]
